fixed alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -550,6 +550,7 @@ section {
         margin-bottom: 30px;
         margin-top: 30px;
         text-transform: uppercase;
+        
     }
 
     .details-container ul {
@@ -562,6 +563,7 @@ section {
         flex-wrap: nowrap;
         width: auto;
         font-size: 14px;
+        text-align: left;
     }
     
     .details-container ul li strong {
